--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,11 @@ github_username:  daniel-p-h
 
 # Build settings
 markdown: kramdown
-theme: minima
 plugins:
   - jekyll-feed
+remote_theme: jekyll/minima
+minima:
+  skin: dark
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
